--- a/locale/ca/LC_MESSAGES/messages.po
+++ b/locale/ca/LC_MESSAGES/messages.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-01-30 19:53+0000\n"
-"PO-Revision-Date: 2013-11-23 15:01+0000\n"
-"Last-Translator: Anna <arosichsoler@gmail.com>\n"
+"PO-Revision-Date: 2015-02-24 16:14+0000\n"
+"Last-Translator: Jordi <jordis@softcatala.cat>\n"
 "Language-Team: Catalan <ca@dodds.net>\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1385218916.0\n"
+"X-POOTLE-MTIME: 1424794496.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16 public/js/lib/cancel.js:18
 msgid "Payment cancelled."
@@ -31,6 +31,8 @@ msgstr "El PIN només pot contenir dígits."
 #: webpay/base/templates/base.html:30
 msgid "You logged in as a different user, you must start the payment again."
 msgstr ""
+"Heu iniciar la sessió amb un altre usuari; cal que torneu a començar el "
+"pagament."
 
 #: public/js/views/throbber.js:15 public/js/views/throbber.js:16 templates/throbber.html:7
 msgid "Loading"
@@ -51,7 +53,7 @@ msgstr "Pagament completat"
 
 #: public/js/lib/auth.js:22 public/js/lib/auth.js:20 public/js/views/page.js:41
 msgid "Oops"
-msgstr ""
+msgstr "Ups"
 
 #: public/js/lib/auth.js:65 public/js/lib/auth.js:84 public/js/lib/auth.js:155 public/js/lib/auth.js:86 public/js/lib/auth.js:157
 msgid "This is taking longer than expected. Try again?"
@@ -59,7 +61,7 @@ msgstr "Està trigant més del que s'esperava. Voleu tornar-ho a provar?"
 
 #: public/js/lib/auth.js:19
 msgid "Something went wrong. Try again?"
-msgstr ""
+msgstr "Alguna cosa ha anat malament. Voleu tornar-ho a provar?"
 
 #: templates/error.html:27 public/js/views/error.js:52 public/js/views/error.js:87 public/js/views/locked.js:24 templates/iframe-overlay.html:14 public/js/views/error.js:55
 #: public/js/views/error.js:90
@@ -140,25 +142,24 @@ msgstr "Esteu segur que voleu reiniciar el PIN? Heu d'iniciar una sessió a Pers
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6 webpay/provider/templates/provider/wait-to-finish.html:12
 msgid "Verifying payment"
-msgstr ""
+msgstr "S'està verificant el pagament"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30 public/js/lib/auth.js:25 public/js/lib/auth.js:39 public/js/lib/auth.js:26 public/js/lib/auth.js:41
 msgid "Retrying"
-msgstr ""
+msgstr "S'està tornant a provar"
 
 #: public/js/lib/auth.js:64
-#, fuzzy
 msgid "That took longer than expected. Retry?"
 msgstr "Està trigant més del que s'esperava. Voleu tornar-ho a provar?"
 
 #: public/js/views/create-pin.js:37 templates/reset-start.html:11 public/js/views/create-pin.js:72 templates/reset-start.html:15 public/js/views/create-pin.js:83
 msgid "Back"
-msgstr ""
+msgstr "Enrere"
 
 #: public/js/views/create-pin.js:38 public/js/views/enter-pin.js:95 public/js/views/enter-pin.js:96 public/js/views/create-pin.js:73 public/js/views/enter-pin.js:100 public/js/views/create-pin.js:84
 #: public/js/views/enter-pin.js:112 public/js/views/enter-pin.js:114
 msgid "Submit"
-msgstr ""
+msgstr "Envia"
 
 #: public/js/views/create-pin.js:66 public/js/views/enter-pin.js:60 public/js/views/reset-pin.js:28 public/js/lib/wait.js:171 public/js/views/create-pin.js:65 public/js/views/enter-pin.js:61
 #: public/js/views/force-auth.js:53 public/js/views/reset-pin.js:29 public/js/views/reset-start.js:107 public/js/views/create-pin.js:101 public/js/views/enter-pin.js:65
@@ -167,199 +168,203 @@ msgstr ""
 #: public/js/views/page.js:43 public/js/views/reset-pin.js:33 public/js/views/reset-start.js:124 public/js/lib/wait.js:170 public/js/views/create-pin.js:119 public/js/views/enter-pin.js:77
 #: public/js/views/reset-start.js:101
 msgid "Retry?"
-msgstr ""
+msgstr "Voleu tornar-ho a provar?"
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116 public/js/views/create-pin.js:113 public/js/views/create-pin.js:115 public/js/views/create-pin.js:149
 #: public/js/views/create-pin.js:152 public/js/views/create-pin.js:164 public/js/views/create-pin.js:167 public/js/views/create-pin.js:170
-#, fuzzy
 msgid "Create PIN"
 msgstr "Crea un PIN"
 
 #: public/js/views/error.js:45
-#, fuzzy
 msgid "Something went wrong."
-msgstr "Quelcom no ha funcionat!"
+msgstr "Alguna cosa ha anat malament."
 
 #: public/js/views/reset-start.js:29 public/js/views/reset-start.js:118 public/js/views/reset-start.js:119 public/js/views/reset-start.js:123 public/js/views/reset-start.js:133
 #: public/js/views/reset-start.js:135 public/js/views/reset-start.js:112
-#, fuzzy
 msgid "Reset your PIN?"
-msgstr "Reinicia el PIN"
+msgstr "Voleu reiniciar el PIN?"
 
 #: public/js/views/was-locked.js:13 public/js/views/was-locked.js:38 public/js/views/was-locked.js:42
 msgid "Was Locked"
-msgstr ""
+msgstr "Estava blocat"
 
 #: public/js/views/wait-for-tx.js:10 public/js/views/wait-to-start.js:13
 msgid "Setting up payment"
-msgstr ""
+msgstr "S'està configurant el pagament"
 
 #: public/js/error-codes.js:12
 msgid "An internal web request timed out."
-msgstr ""
+msgstr "S'ha esgotat el temps d'espera d'una sol·licitud web interna."
 
 #: public/js/error-codes.js:13
 msgid "The system timed out while trying to log in."
 msgstr ""
+"S'ha esgotat el temps d'espera del sistema en provar d'iniciar la sessió."
 
 #: public/js/error-codes.js:14
 msgid "An error occurred whilst trying to log out."
-msgstr ""
+msgstr "S'ha produït un error en intentar tancar la sessió."
 
 #: public/js/error-codes.js:15
 msgid "The system timed out while trying to log out."
 msgstr ""
+"S'ha esgotat el temps d'espera del sistema en provar de tancar la sessió."
 
 #: public/js/error-codes.js:16
 msgid "Payments are temporarily disabled."
-msgstr ""
+msgstr "Els pagaments estan desactivats temporalment."
 
 #: public/js/error-codes.js:17
 msgid "An unexpected error occurred when creating your PIN."
-msgstr ""
+msgstr "S'ha produït un error inesperat en crear el PIN."
 
 #: public/js/error-codes.js:18 public/js/error-codes.js:27
 msgid "The PIN data submitted was invalid."
-msgstr ""
+msgstr "Les dades del PIN indicades no són vàlides."
 
 #: public/js/error-codes.js:19
 msgid "No valid user found whilst attempting to create your PIN"
-msgstr ""
+msgstr "No s'ha trobat cap usuari vàlid en intentar crear el PIN"
 
 #: public/js/error-codes.js:20
 msgid "Permission denied attempting to create your PIN."
-msgstr ""
+msgstr "S'ha denegat el permís en intentar crear el PIN."
 
 #: public/js/error-codes.js:21
 msgid "The request timed out whilst attempting to create your PIN."
 msgstr ""
+"S'ha esgotat el temps d'espera de la sol·licitud en intentar crear el PIN."
 
 #: public/js/error-codes.js:22
 msgid "An unexpected error occurred whilst checking your PIN."
-msgstr ""
+msgstr "S'ha produït un error en comprovar el PIN."
 
 #: public/js/error-codes.js:23
 msgid "No valid user found whilst checking your PIN"
-msgstr ""
+msgstr "No s'ha trobat cap usuari vàlid en comprovar el PIN"
 
 #: public/js/error-codes.js:24
 msgid "Permission denied attempting to check your PIN"
-msgstr ""
+msgstr "S'ha denegat el permís en intentar comprovar el PIN."
 
 #: public/js/error-codes.js:25
 msgid "The request timed out whilst trying to check your PIN"
 msgstr ""
+"S'ha esgotat el temps d'espera de la sol·licitud en intentar comprovar el "
+"PIN"
 
 #: public/js/error-codes.js:26
 msgid "An unexpected error occurred when resetting your PIN."
-msgstr ""
+msgstr "S'ha produït un error inesperat en reiniciar el PIN."
 
 #: public/js/error-codes.js:28
 msgid "No valid user found whilst attempting to reset your PIN"
-msgstr ""
+msgstr "No s'ha trobat cap usuari vàlid en intentar reiniciar el PIN"
 
 #: public/js/error-codes.js:29
 msgid "Permission denied attempting to reset your PIN."
-msgstr ""
+msgstr "S'ha denegat el permís en intentar reiniciar el PIN."
 
 #: public/js/error-codes.js:30
 msgid "The request timed out whilst attempting to reset your PIN."
 msgstr ""
+"S'ha esgotat el temps d'espera de la sol·licitud en intentar reiniciar el "
+"PIN."
 
 #: public/js/error-codes.js:31
 msgid "The transaction failed. You have not been charged for this purchase."
-msgstr ""
+msgstr "Ha fallat la transacció. Aquesta compra no se us ha cobrat."
 
 #: public/js/error-codes.js:32
 msgid "The payment method or price point is not supported for this region or operator."
 msgstr ""
+"Aquesta regió o aquest operador no admeten el mètode de pagament o el preu."
 
 #: public/js/lib/auth.js:214
 msgid "Waiting for login"
-msgstr ""
+msgstr "S'està esperant un inici de sessió"
 
 #: public/js/lib/wait.js:56
 msgid "Retrieving Transaction"
-msgstr ""
+msgstr "S'està recuperant la transacció"
 
 #: public/js/views/error.js:55 public/js/views/error.js:58
 msgid "An unexpected error occurred."
-msgstr ""
+msgstr "S'ha produït un error inesperat."
 
 #: public/js/views/force-auth.js:87 public/js/views/force-auth.js:100 public/js/views/force-auth.js:99 public/js/views/force-auth.js:94
 msgid "Sign-in to reset PIN"
-msgstr ""
+msgstr "Inicieu la sessió per reiniciar el PIN"
 
 #: public/js/views/force-auth.js:90 public/js/views/force-auth.js:103 public/js/views/force-auth.js:102 public/js/views/force-auth.js:97
 msgid "Please sign in to reset your PIN."
-msgstr ""
+msgstr "Inicieu la sessió per reiniciar el PIN."
 
 #: public/js/views/init.js:12
 msgid "Initializing"
-msgstr ""
+msgstr "S'està inicialitzant"
 
 #: public/js/views/locked.js:21
-#, fuzzy
 msgid "PIN Locked"
-msgstr "El vostre PIN estava bloquejat"
+msgstr "El PIN està bloquejat"
 
 #: public/js/views/payment-success.js:15 public/js/views/wait-to-finish.js:14
-#, fuzzy
 msgid "Completing payment"
-msgstr "Comença el pagament"
+msgstr "S'està completant el pagament"
 
 #: public/js/views/simulate.js:23
 msgid "Processing"
-msgstr ""
+msgstr "S'està processant"
 
 #: public/js/views/simulate.js:51
 msgid "Simulate Payment"
-msgstr ""
+msgstr "Simula un pagament"
 
 #: public/js/views/simulate.js:55
 msgid "You will not be charged."
-msgstr ""
+msgstr "No se us aplicarà cap càrrec."
 
 #: templates/reset-start.html:12 templates/reset-start.html:16
-#, fuzzy
 msgid "Reset"
-msgstr "Reinicia el PIN"
+msgstr "Reinicia"
 
 #: templates/pin-form.html:22
 msgid "By proceeding you agree to our <a %(terms)s>terms</a> and <a %(privacy)s>Privacy Policy</a>"
 msgstr ""
+"En continuar, accepteu les <a %(terms)s>condicions d'ús</a> i la <a %"
+"(privacy)s>política de privadesa</a>"
 
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68 public/js/views/force-auth.js:90 public/js/views/reset-start.js:70 public/js/views/force-auth.js:88 public/js/views/login.js:18
 #: public/js/views/reset-start.js:55
-#, fuzzy
 msgid "Connecting to Firefox Accounts"
-msgstr "S'està connectant a Persona"
+msgstr "S'està connectant a Firefox Accounts"
 
 #: templates/reset-start.html:8 templates/reset-start.html:7
-#, fuzzy
 msgid "Are you sure you want to reset your PIN? You must sign in to Firefox Accounts to reset your PIN."
-msgstr "Esteu segur que voleu reiniciar el PIN? Heu d'iniciar una sessió a Persona per reiniciar-lo."
+msgstr ""
+"Esteu segur que voleu reiniciar el PIN? Heu d'iniciar una sessió amb el "
+"compte de Firefox Accounts per reiniciar-lo."
 
 #: public/js/views/page.js:34
 msgid "Logging out"
-msgstr ""
+msgstr "S'està tancant la sessió"
 
 #: templates/signout.html:9
 msgid "You are signed in as:"
-msgstr ""
+msgstr "Sessió iniciada com a:"
 
 #: templates/signout.html:11
 msgid "Not you?"
-msgstr ""
+msgstr "No sóc jo."
 
 #: public/js/views/super-simulate.js:44
 msgid "Super Simulate"
-msgstr ""
+msgstr "Super Simulate"
 
 #: templates/super-simulate.html:8
 msgid "Simulate Something?"
-msgstr ""
+msgstr "Voleu simular alguna cosa?"
 
 #: templates/super-simulate.html:11
 msgid "No network simulation"
-msgstr ""
+msgstr "No hi ha cap simulació de xarxa"
